# area51

./: .gitignore  CMakeLists.txt  Doxyfile  ExecutionTime.h  LICENSE  License.md  README.md  circular_buffer.hpp  containers.hpp  custom_mpl.hpp  doxyfile  fast_find.hpp  formatted_read.hpp  iterator.hpp  main.cpp  makefile  member_callback.hpp  numerical.hpp  prime_numbers.hpp  randomsequence.h  scope_exit.hpp  string_manip.hpp  stringmanip.hpp  timing_session.hpp
demos/: CMakeLists.txt  bubble_sort_demo.cpp  comb_sort_demo.cpp  digit_iterator_demo.cpp  insertion_sort_demo.cpp  random_int_generator_demo.cpp  random_selector_demo.cpp  shaker_sort_demo.cpp
handwritten-docs/: average.md  deduce_single_parameter.md  scope_exit.md  sliding_window.md  stumbled_iterator.md  transform_iterator.md
logs/: Implementation Status.md
python/: benchmark_displayer.py
src/: CMakeLists.txt  algorithm.hpp  benchmark.hpp  benchmark_streamer.hpp  benchmark_v2.hpp  circular_buffer.hpp  containers.hpp  custom_mpl.hpp  deduce_first_parameter.hpp  deduce_single_parameter.cpp  deduce_single_parameter.hpp  explode_tuple.cpp  explode_tuple.hpp  fast_find.hpp  formatted_read.hpp  functors.hpp  input_digit_iterator.hpp  iterator.hpp  main.cpp  member_callback.hpp  numerical.cpp  numerical.hpp  preprocessing_iterator.cpp  preprocessing_iterator.hpp  prime_numbers.hpp  random_engine.hpp  random_int_generator.hpp  random_selector.hpp  regular_callable.hpp  result_cache.hpp  scope_exit.hpp  sliding_window.cpp  sliding_window.hpp  sort.hpp  string_manip.hpp  timing_session.hpp  transform_iterator.cpp  transform_iterator.hpp  tuple_exploder.cpp  tuple_exploder.hpp  (+3 more)
src/benchmark-formatters/: def_formatter.hpp
src/generators/: int_vector_generator.hpp
src/markargs/: grammar.md  parser.hpp
tests/: CMakeLists.txt  benchmark_rewrite_test.cpp  benchmark_tests.cpp  benchmark_v2_tests.cpp  circular_buffer_tests.cpp  comb_sort_tests.cpp  deduce_single_parameter_tests.cpp  fill_by_sequence_tests.cpp  first_parameter_extraction_tests.cpp  geniune_apply_tests.cpp  merge_sort_tests.cpp  merge_tests.cpp  most_frequent_tests.cpp  numerical_tests.cpp  preprocessing_iterator_tests.cpp  quick_sort_tests.cpp  regular_callable_tests.cpp  result_cache_tests.cpp  scope_exit_tests.cpp  sliding_window_tests.cpp  stumbled_iterators_test.cpp  transform_iterator_tests.cpp  tuple_exploder_tests.cpp  utilities_tests.cpp
